# house_prices

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yml
deploy/: main.py
notebooks/: 00_exploratory_data_analysis.ipynb  misc.ipynb
src/: __init__.py  main.py  version.py
src/house_prices/: util.py
tests/: test_util.py
